# Syllabus

./: .gitignore  .gitmodules  CITATION.cff  Dockerfile  LICENSE  Makefile  README.md  cmsc320_hw4.ipynb  demo.py  lasertag_generated.ipynb  lasertag_ppo.py  lasertag_sp.py  ppo_atari.py  profiling_results.prof  pufferlib_cleanrl_minimal.py  pyproject.toml  requirements.txt  run_benchmarks.sh  run_tests.sh  setup.py  test_procgen.sh  vecenv_rnn_lstm_pufferlib.py  wrapper.ipynb
baselines/: dr.slurm_template  lp.slurm_template  plr.slurm_template  run_dr.sh  run_lp.sh  run_plr.sh
core/: __init__.py  curriculum_base.py  curriculum_sync_wrapper.py  multivariate_curriculum_wrapper.py
curricula/: __init__.py  annealing_box.py  learning_progress.py  simple_box.py
docs/: .buildinfo  benchmarks.html  curriculum.html  environments.html  evaluators.html  genindex.html  index.html  installation.html  logging.html  modules.html  motivation.html  objects.inv  py-modindex.html  quickstart.html  quickstart.spelling  search.html  searchindex.js  stat_recorder.html  syllabus.core.html  syllabus.curricula.html  syllabus.curricula.plr.html  syllabus.examples.html  syllabus.examples.task_wrappers.html  syllabus.html  syllabus.task_space.html  syllabus.tests.html  taskspace.html
docs-source/: benchmarks.rst  conf.py  environments.rst  evaluators.rst  index.rst  logging.rst  motivation.rst  quickstart.rst  stat_recorder.rst
lasertag/: __init__.py  custom_test.py  generator.py  grid.py  lasertag.py  pyproject.toml  register.py
lasertag/gdy/: lasertag_wall_general_zs.yaml
(+664 files in other folders)
