[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "Syllabus-RL"
authors = [
  { name="Ryan Sullivan", email="ryanpnavillus@gmail.com" },
]
description = "A library for training RL agent with curriculum learning"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dynamic = ["version", "dependencies", "keywords", "optional-dependencies"]

[project.urls]
"Homepage" = "https://github.com/RyanNavillus/Syllabus"
