[tool.poetry]
name = "lasertag"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
gym = "^0.26.2"
numpy = "^1.26.4"
torch = "^2.2.1"
griddly = "^1.6.7"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
